gcc/testsuite/rust/rustc/ui/rfcs/rfc-2632-const-trait-impl/const-impl-norecover_dg.rs
#![feature(const_trait_impl)]

struct Foo;

const impl Foo { // { dg-error "" "" { target *-*-* } }
    fn bar() {}
}

fn main() {
     // shouldn't error here because we shouldn't have been able to recover above
     Foo::bar();
}

